# mipsi

./: Cargo.toml  README.md  ]  test.sh
.github/workflows/: rust.yml
example/: 2-dimensional_arrays.asm  arithmetic_progression.asm  fibonacci.asm  fibonacci2.asm  function.asm  hello.asm  loop.asm  myown.asm  non_recursive_fibonacci.asm  pi.asm  print_array_contents.asm  read_string.asm  ror.asm  test.sh
src/: cli.rs  lexer.rs  lib.rs  main.rs  parser.rs  repl.rs  token.rs  wasm.rs
src/lexer/: mod.rs  test.rs
src/parser/: display.rs  eval.rs  mod.rs  test.rs
src/token/: memory.rs  method.rs  mod.rs  register.rs
www/: index.html  index.js  style.css
